--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -435,3 +435,29 @@ h6,
   font-family: 'Lora', serif;
   font-size: 24px;
 }
+
+#msg-box5-5 H3 {
+  font-family: 'Lora', serif;
+}
+#msg-box5-5 P {
+  text-align: left;
+}
+
+
+#msg-box5-b SPAN {
+  font-family: 'Lora', serif;
+}
+#msg-box5-b P {
+  text-align: left;
+  font-family: 'Lora', serif;
+}
+
+
+#msg-box5-h H3 {
+  font-family: 'Lora', serif;
+}
+#msg-box5-h P {
+  font-family: 'Lora', serif;
+  font-size: 17px;
+  text-align: left;
+}
