--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,10 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
-
-
-
 
 
 
@@ -416,48 +412,137 @@ h6,
 .scrollToTop_wraper {
   opacity: 0 !important;
 }
-#header1-1 .mbr-section-title {
-  text-align: left;
-  font-size: 20px;
-  color: #000000;
-  font-family: 'Roboto', sans-serif;
+#menu-j .hide-buttons .nav-btn {
+  display: none !important;
 }
-#header1-1 .mbr-section-lead {
-  color: #000000;
-  font-size: 21px;
-  text-align: left;
+#menu-j .navbar-caption {
+  color: #ffffff;
   font-family: 'Lora', serif;
+  font-size: 18px;
 }
-#header1-1 .btn {
-  font-family: 'Lora', serif;
+#menu-j .navbar-toggler {
+  color: #ffffff;
 }
-#header1-1 .mbr-section-title SPAN {
-  font-family: 'Lora', serif;
-  font-size: 24px;
+#menu-j .close-icon::before,
+#menu-j .close-icon::after {
+  background-color: #ffffff;
+}
+#menu-j .link,
+#menu-j .dropdown-item {
+  color: #ffffff;
+}
+#menu-j .link {
+  font-size: 0.6rem;
+}
+#menu-j .dropdown-item,
+#menu-j .nav-dropdown-sm .link {
+  font-size: 0.650rem;
+}
+#menu-j .link:hover,
+#menu-j .dropdown-item:hover,
+#menu-j .link:focus,
+#menu-j .dropdown-item:focus {
+  color: #c0a375;
+}
+#menu-j .link[aria-expanded="true"],
+#menu-j .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-j .nav-dropdown-sm .link:focus,
+#menu-j .nav-dropdown-sm .link:hover,
+#menu-j .nav-dropdown-sm .dropdown-item:focus,
+#menu-j .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-j .navbar,
+#menu-j .nav-dropdown-sm,
+#menu-j .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-j .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-j .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-j .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-j .bg-color.transparent.opened .link:hover,
+#menu-j .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#menu-j .link[aria-expanded="true"],
+#menu-j .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
 }
 
-#msg-box5-5 H3 {
-  font-family: 'Lora', serif;
+#msg-box8-r .mbr-section-title,
+#msg-box8-r p {
+  color: #fff;
 }
-#msg-box5-5 P {
+#content2-q P {
   text-align: left;
 }
-
-
-#msg-box5-b SPAN {
-  font-family: 'Lora', serif;
+#menu-p .hide-buttons .nav-btn {
+  display: none !important;
 }
-#msg-box5-b P {
-  text-align: left;
+#menu-p .navbar-caption {
+  color: #ffffff;
   font-family: 'Lora', serif;
+  font-size: 18px;
 }
-
-
-#msg-box5-h H3 {
-  font-family: 'Lora', serif;
+#menu-p .navbar-toggler {
+  color: #ffffff;
 }
-#msg-box5-h P {
-  font-family: 'Lora', serif;
-  font-size: 17px;
-  text-align: left;
+#menu-p .close-icon::before,
+#menu-p .close-icon::after {
+  background-color: #ffffff;
+}
+#menu-p .link,
+#menu-p .dropdown-item {
+  color: #ffffff;
+}
+#menu-p .link {
+  font-size: 0.6rem;
+}
+#menu-p .dropdown-item,
+#menu-p .nav-dropdown-sm .link {
+  font-size: 0.650rem;
+}
+#menu-p .link:hover,
+#menu-p .dropdown-item:hover,
+#menu-p .link:focus,
+#menu-p .dropdown-item:focus {
+  color: #c0a375;
+}
+#menu-p .link[aria-expanded="true"],
+#menu-p .dropdown-menu {
+  background: #0e0e0e;
+}
+#menu-p .nav-dropdown-sm .link:focus,
+#menu-p .nav-dropdown-sm .link:hover,
+#menu-p .nav-dropdown-sm .dropdown-item:focus,
+#menu-p .nav-dropdown-sm .dropdown-item:hover {
+  background: #202020!important;
+}
+#menu-p .navbar,
+#menu-p .nav-dropdown-sm,
+#menu-p .nav-dropdown-sm .link[aria-expanded="true"],
+#menu-p .nav-dropdown-sm .dropdown-menu {
+  background: #282828;
+}
+#menu-p .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#menu-p .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#menu-p .bg-color.transparent.opened .link:hover,
+#menu-p .bg-color.transparent.opened .link:focus {
+  color: #c0a375;
+}
+#menu-p .link[aria-expanded="true"],
+#menu-p .dropdown-item[aria-expanded="true"] {
+  color: #c0a375!important;
 }
